# flutter-tflite

./: .gitignore  .metadata  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  analysis_options.yaml  ffigen_tensorflow_lite.yaml  flutter-tflite.code-workspace  install.bat  install.sh  makefile  melos.yaml  pubspec.yaml
.github/workflows/: README.md  flutter-ci.yml  flutter-compile-examples.yml
android/: .gitignore  build.gradle  settings.gradle
example/: .gitignore  README.md  install.sh  pubspec.yaml
example/assets/: text_classification_vocab.txt
example/audio_classification/: README.md  analysis_options.yaml  pubspec.yaml
example/bertqa/: .metadata  README.md  pubspec.yaml
example/digit_classification/: .metadata  README.md  pubspec.yaml
example/gesture_classification/: README.md  pubspec.yaml
example/image_classification_mobilenet/: .metadata  README.md  makefile  pubspec.yaml
example/image_segmentation/: README.md  (+2 more)
ios/: tflite_flutter.podspec
lib/: tflite_flutter.dart  tflite_flutter_method_channel.dart  tflite_flutter_platform_interface.dart
linux/: CMakeLists.txt  flutter_tflite_plugin.cc  flutter_tflite_plugin_private.h  tflite_flutter_plugin.cc
linux/include/flutter_tflite/: flutter_tflite_plugin.h
linux/include/tflite_flutter/: tflite_flutter_plugin.h
linux/test/: flutter_tflite_plugin_test.cc
macos/: tflite_flutter.podspec
test/: tflite_flutter_method_channel_test.dart  tflite_flutter_test.dart
windows/: CMakeLists.txt  flutter_tflite_plugin.cpp  flutter_tflite_plugin.h  flutter_tflite_plugin_c_api.cpp
(+377 files in other folders)
